2016-09-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amadmin.c (find): Do not call find_log(), it is a cpu hog
	  and it print useless warning
	* server-src/tapefile.c (lookup_tapelabel): Use a hash

2016-09-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Report.pm: A Fail driver line must set the exit_status
	  to STATUS_FAILED
	* installcheck/Amanda_ClientService.pl: Fix test

2016-09-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Device.pl: Fix a test

2016-09-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/planner.c (when_overwrite): Use the tapecycle
	* server-src/tapefile.c (nb_tape_in_storage): New function to compute
	  the number of tape in a storage
	* server-src/tapefile.h (nb_tape_in_storage): Add prototype
	* installcheck/success-dumper-chunker-2taper-by-level.pl: Fix test

2016-09-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/planner.c (when_overwrite): Fix off by 1 error
	* server-src/tapefile.c (tape_overwrite): Use tp1->retention

2016-09-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/ScanInventory.pm: Use storage_nme fro chg->storage
	* server-src/amadmin.c: Remove spurious print message
	* server-src/amreindex.pl: Remove spurious print message
	* server-src/dumper.c: Call g_mutex_new and g_cond_new before creating
	  the thread, this fix a race
	* server-src/infofile.c (read_txinfofile): return 0 on success
	* server-src/planner.c (when_overwrite): Use storage setting
	* server-src/tapefile.c (tape_overwrite): New function to return how
	  many tapes whould be reuse before this one
	* server-src/tapefile.h (tape_overwrite): Add prototype

2016-09-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* NEWS, ReleaseNotes: Update for 3.4

2016-09-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Do not call cleanup_shm_ring too often
	* common-src/shm-ring.c (cleanup_shm_ring): Do not remove new shm,